# how_bootcamp_data

./: .env  .gitignore  Makefile  apis.py  ingestors.py  main.py  pyproject.toml  writers.py  zappa_settings.json
.github/workflows/: develop.yml  feature_branch.yml  production.yml
mercado_bitcoin/: apis.py  checkpoints.py  ingestors.py  lambda_function.py  main.py  writers.py
tests/: test_api.py  test_ingestors.py  test_integration.py
