[tool.poetry]
name = "mercado-bitcoin-lambda"
version = "0.1.0"
description = ""
authors = ["Allan Camargo <allan.cdev@gmail.com>"]
readme = "README.md"
packages = [{include = "mercado_bitcoin_lambda"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
ratelimit = "^2.2.1"
backoff = "^2.2.1"
boto3 = "^1.26.54"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
zappa = "^0.56.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
