[tool.poetry]
name = "mercado-bitcoin-lambda"
version = "0.1.0"
description = ""
authors = ["Allan Camargo <allan.cdev@gmail.com>"]
readme = "README.md"
packages = [{include = "mercado_bitcoin_lambda"}]

[tool.poetry.dependencies]
python = "^3.8"
zappa = "0.50.0"
requests = "^2.25.1"
boto3 = "^1.17.108"
backoff = "^1.10.0"
ratelimit = "^2.2.1"
pynamodb = "^5.1.0"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pytest = "^7.2.1"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"
pytest-cov = "^2.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.github
  | \.circleci
  | \.hg
  | \.mypy_cache
  | \.tox
  | \venv
  | \.venv
  | \.eggs
  | _build
  | buck-out
  | build
  | dist
  | src
  | venv
)/
'''